playground/notas_tests/invalid/pos-01.hulk
function foo(x) => x;
print(foo(1 + "bad"));
